Home and overall style

--- a/css/host.scss
+++ b/css/host.scss
@@ -11,9 +11,9 @@ $fx-ui-common: '../submodules/fenix-ui-common/css/';
 @import 'pages/datamanagement';
 @import 'pages/home';
 
-
-/* Components */
-@import "components/bootstrap-fixed-height";
+//
+///* Components */
+//@import "components/bootstrap-fixed-height";
 
 /* Theme */
 @import "themes/side-menu";
