--- a/css/themes/_variables.scss
+++ b/css/themes/_variables.scss
@@ -24,7 +24,7 @@ $fx-text-smalltitle-bold: normal normal 700 12px/normal 'Roboto';
 $fenix-standard-blue: rgba(53, 166, 220, 1);
 //$fx-cool-blue:  red;
 
-$fx-cool-blue:  #f07f52;
+$fx-cool-blue:  #db514b;
 
 $fx-secondary-color: desaturate( $fx-cool-blue, 50% );
 
@@ -48,20 +48,20 @@ $fenix-hr-footer: #666666;
 
 $fenix-thin-border: 1px solid $fenix-hr;
 
-$afg-custom-color1: #2d3e46;
+$afg-custom-color1: #29403e;
 
-$afg-custom-color2: #345962;
-$afg-custom-color3: #3f7d8b;
-$afg-yellow: #f09752;
-$afg-yellow-light: #f8cba9;
+$afg-custom-color2: #305a52;
+$afg-custom-color3: #3a7f70;
+$afg-yellow: #e4c779;
+$afg-yellow-light: #f5e5bb;
 $afg-false-white: #e0e9f0;
 $afg-light-blue-bg: #e0e9f1;
 $afg-light-blue-text: #abb9c4;
-$afg-light-blue-big-text: #c9ddef;
+$afg-light-blue-big-text: #b8d7da;
 
-$afg-blue-tile: #93abab;
-$afg-map-tile: #a5d0cf;
-$afg-home-background: #2f5674;
+$afg-blue-tile: #869c93;
+$afg-map-tile: #97bead;
+$afg-home-background: #2b686a;
 
 // Specials
 $white-alpha: rgba(255, 255, 255, 0.9);
