--- a/scripts/templates/side.html
+++ b/scripts/templates/side.html
@@ -2,9 +2,9 @@
 
     <!-- Logo -->
     <div class="brand-logo">
-        <img src="css/img/cmr-central-statistics-logo.png">
-        <h4 class="title">MINADER</h4>
-        <span class="subtitle">Ministère de l'Agriculture et du Développement Rural</span>
+        <img src="css/img/zam-central-statistics-logo.png">
+        <h4 class="title">ZAMBIA</h4>
+        <span class="subtitle">Central Statistical Office of Zambia</span>
 
     </div>
     <ul class="sidebar-nav fx-ul">
